# genai_notebooks

./: (Clone) ai_parse.ipynb  .gitignore  Bedrock Call.ipynb  Databricks Policy for Third Party AI Services (go_llmpolicy).txt  OpenAI External Model Evaluation.py  README.md  Untitled Notebook 2025-08-11 15_00_34.ipynb  app.yaml  databricks.yml  docx_generator.ipynb  pyproject.toml  requirements.txt
.cursor/: mcp.json
ai_functions/: les_mis_data_prep.ipynb  les_mis_w_prompt.parquet  les_miserables_aiquery.ipynb  les_miserables_ray.ipynb  ray_external_model_les_mis.ipynb
azure_openai/: agent_driver.py  azure_assistant_tracing.ipynb  azure_openai_debugging.py  driver_azure_chat_retriever.ipynb  pyfunc_azure_chat_retriever.py
batch_inference/: bank_checks.ipynb  les_miserables_spark.ipynb  location_v0.dbquery.ipynb  product_sentiment.dbquery.ipynb
contract_analysis/: 0_download_data.ipynb  1_parse.dbquery.ipynb  2_information_extraction.dbquery.ipynb  3_vector_search.ipynb  4_amendment.dbquery.ipynb  4_classify.dbquery.ipynb  5_explode.dbquery.ipynb  5_explode_analyze.dbquery.ipynb  cook_county_contracts.parquet  readme.md
cost_management/: cost management.ipynb  llm billing.dbquery.ipynb  throughput_estimation.ipynb
custom_models/: Gemma3.ipynb  Qwen Example.ipynb  deploy-mlflow-pyfunc-model-serving-azure.py  deploy-transformers-model-serving-azure.py  tinyllama_transformers.ipynb
document_intelligence/: claim_doc_parsing.ipynb  claude_ai_query.ipynb
dspy/: 01_Intro.py  02_Custom Modules and Tool Calling.py  Databricks-AI-rag.py  IMPLEMENTATION_GUIDE.md  README.md  azure_config.yaml  azure_search_extraction.ipynb  config.yaml  example_usage.py  mlflowdriver.py
evaluation/: inference_table_to_mlflow.ipynb  mlflow_genai_evaluation.ipynb  multimodal_thinking_evaluation.ipynb  rag_chain_config.yml  review_app.py
external_model_batch_profiling/: les_miserables_spark.ipynb
external_models/: agent.py  azure_agent.py  azure_assistant_tracing.ipynb  azure_search_responses_agent.ipynb  pyfunc_azure_completion_retriever.py
fastapi/: app.py  app.yaml  async_llm_app.py  async_llm_client.ipynb  requirements.txt  test_app.ipynb  test_llm_client.ipynb
graph/: kuzu_test.ipynb
langgraph/: langgraph_basics.ipynb  reasoning.ipynb  structured_outputs.ipynb
mcp/: agent.py  mcp_notes.md  openai-mcp-tool-calling-agent.ipynb  test_connection.ipynb
mlflow-ext-ezdeploy/: mlflow-ext-ezdeploy.ipynb
mlflow_walkthrough/: 0_walkthrough.ipynb  EMAIL.md  README.md  arxiv_eval_walkthrough.ipynb  arxiv_tools.py  caspers_kitchen_eval_demo_databricks.ipynb  detailed_evaluation.csv  evaluation_summary.json  prompt_results.csv  score_distribution.json  template_comparison.csv
multimodal/: ai_query.dbquery.ipynb  claude_ai_query.ipynb  claude_structured.ipynb  layoutlmv3.py  pdf_parsing.ipynb
provisioned_throughput/: register_qwen.py
queries/: llm billing.dbquery.ipynb
resources/: mlflow_walkthrough_job.yml  pii_profiling_job.yml
small_examples/: app.yaml  async_llm_app.py  async_llm_client.ipynb  openai_oss_thinking.ipynb  predict_logits.py  requirements.txt
src/: Untitled Notebook 2025-05-02 12_45_18.ipynb  azure_multimodal.py  azure_openai_profiling.py  create_model_for_api_calls.ipynb  huggingface_model_deployment.ipynb  langgraph_sql_tools.ipynb  llm_udfs.py  logits.py  test_data.json
src/agent_authentication/: agent.py  driver_example.py  test model_example.py
src/ai_query_multimodal/: ai_query.dbquery.ipynb  claude_ai_query.ipynb  few_shot_multimodal_classification.ipynb  pdf_parsing.ipynb
src/aida_model/: MLmodel  conda.yaml  python_model.pkl  requirements.txt
src/azure_assistant_tracing/: __init__.py  app.py  azure_client.py  config.py  feedback.py  mlflow_tracing.py  tracing_service.py
src/azure_openai_profiling/: config.yaml  driver_azure_chat_retriever.ipynb  driver_azure_completion_retriever.ipynb  test_data.json
src/azure_search_dspy/: __init__.py  agent.py  evaluation.py  models.py  retriever.py  signatures.py
src/batch_inference/: location_v0.dbquery.ipynb  location_v1.dbquery.ipynb  location_v2.dbquery.ipynb  product_sentiment.dbquery.ipynb  slogan.dbquery.ipynb
src/external_model_batch_profiling/: data_prep.ipynb  endpoint_creation.ipynb  les_miserables_aiquery.ipynb  les_miserables_ray.ipynb  les_miserables_spark.ipynb
src/gateway_profiling/: les_miserables_ray.ipynb  (+1 more)
vector_search/: 01_self_managed_filter_test.py  02_managed_embedding_filter_test.py  vector_search_batch_inference.ipynb
vllm/: pii_detection_profiling.ipynb
workorder_fine_tuning/: Evaluate Model.py  Preprocess Dataset.py  QLoRA Fine Tuning.py
(+33 files in other folders)
